# f2c_coverage_planner

./: .gitignore  CLAUDE.md  README.md  README_CN.md  RELEASE.md  SETUP_GUIDE.md  backup_v99.60_per_cell.cpp  sync_and_build.sh
.claude/skills/: f2c-coverage-planner.md  path-planning-algorithms.md
docs/: 6场景基准测试_2026-07-11.md  F2C_技术文档.md  Swath排序模式对比.md  code_review_2026-07-16.md  codex_brief_2026-07-22.md  diagnosis_batch_0716_1331.md  f2c_skill_reference_for_codex.md  progress_report_2026-07-14_v8.docx  research_path_efficiency_and_audit_2026-07-23.md  scoring_formula_research_2026-07-16.md  step2_stateful_greedy_route_draft_2026-07-23.md  v10.0-defense-ppt-outline-brief.md  v10.0-defense-ppt-outline.md  v10.0-defense-ppt.pptx  产品需求待办.md  代码审查_v1.0.0.md  模块化重构方案.md  边界处理代码摘录.md
docs/archive/: 6场景基准测试_v2评估修正_2026-07-11.md  F2C_技术文档.docx  Phase2-4_实施报告.md  progress_charts_2026-07-14.html  综合进展报告_v8_2026-07-14.md  评估框架.md  进展报告_2026-07-14.md
docs/daily_logs/: 2026-07-08.md  2026-07-09.md  2026-07-10.md  2026-07-11.md  2026-07-12-evening.md  2026-07-12.md  2026-07-13.md  2026-07-14.md  2026-07-15.md  2026-07-16.md  2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-23.md
docs/design/: S3_decomp_diagram.txt  S3_exact_diagram.txt
docs/references/: F2C路径规划问题（对比智元）.docx  Swath角度优化.md  _docx_extracted.txt  参考资料分析.md  算法改进路线图.md  语雀.md  障碍物分解策略.md
scripts/: audit_test_report.py  batch_render_v2.sh  batch_render_v3.py  batch_result_gate.py  batch_test_v2.sh  bench_7_v6.py  capture_test_scenario.py  f2c_playground.py  full_benchmark.sh  full_benchmark_v2.sh  gen_ppt.py  md2docx.py  n3_repeat_test.sh  quick_dev_test.sh  regression_check.py  render_coverage.py  run_test_on_vm.sh  s1_quick_test.sh  s7_quick_test.sh  sync_and_build.sh  test_and_capture.py  test_audit_test_report.py  test_batch_result_gate.py  test_s7_fixture.py  wsl_batch.sh  wsl_env.sh
scripts/archive/: batch_render.sh  batch_render_v3.py  batch_test_all.sh  compare_snake_vs_custom.sh  quick_s3_sweep.sh  quick_test.sh  send_test_polygon.py  viz_test.sh
src/yingshi_robot/: CMakeLists.txt  LICENSE  package.xml
src/yingshi_robot/config/: f2c_planner.rviz
src/yingshi_robot/config/f2c_areas/: notched_10m_with_center_hole.yaml
src/yingshi_robot/include/yingshi_robot/: artifact_sink.hpp  boundary_filler.hpp  decomposer.hpp  geometry_normalizer.hpp  path_geometry.hpp  path_planner.hpp  path_sanity_check.hpp  physical_footprint.hpp  planner_config.hpp  planner_core.hpp  planner_params.hpp  swath_generator.hpp  traversability.hpp
src/yingshi_robot/scripts/: batch_test_phase3.py  generate_test_scenes.py  run_f2c_optimized.sh  run_f2c_rviz_demo.sh
src/yingshi_robot/src/: boundary_filler.cpp  coverage_evaluator.hpp  decomposer.cpp  geometry_normalizer.cpp  path_planner.cpp  physical_footprint.cpp  planner_config.cpp  planner_core.cpp  polygon_planner_node.cpp  swath_generator.cpp  traversability.cpp
src/yingshi_robot/test/: artifact_sink_test.cpp  coverage_evaluator_test.cpp  decomposer_test.cpp  path_geometry_test.cpp  physical_footprint_test.cpp  planner_config_test.cpp  planner_core_test.cpp  planning_invariants_test.cpp  traversability_test.cpp
src/yingshi_robot/test_polygons/: S1_S1_convex_rect.yaml  S2_S2_L_shaped.yaml  S3_S3_with_holes.yaml  S4_S4_narrow_corridor.yaml  S5_S5_irregular.yaml  S6_S6_multi_region.yaml  S7_S7_factory_workshop.yaml  dense_shelves.yaml  gate_shape.yaml  l_shape_large.yaml  large_warehouse.yaml  oblique_with_round_hole.yaml  rect_multi_obstacles.yaml  ring.yaml  u_corridor.yaml  u_shape.yaml  warehouse_horiz_shelves.yaml  warehouse_mixed_shelves.yaml  warehouse_shelves.yaml  warehouse_shelves_with_hole.yaml
test/golden/batch_0717_1310/: S1_data.json  S1_grid.json  S2_data.json  S2_grid.json  S3_data.json  S3_grid.json  S4_data.json  S4_grid.json  S5_data.json  S5_grid.json  S6_data.json  S6_grid.json  batch_report.txt  notched_data.json  notched_grid.json
test_results/batch_0724_1402/: batch_report.txt
